# clap_autodoc

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
tests/: basic_test.rs  flattening_test.rs  nested_test.rs  position_independent_test.rs  registry_test.rs
tests/output/: flattening_test_output.md  nested_flat_output.md  nested_grouped_output.md  position_independent_output.md  test_output.md
