[package]
name = "clap_autodoc"
version = "0.2.0"
edition = "2021"
authors = ["videobitva <vadimgromovoy@gmail.com>"]
description = "A Rust proc macro for automatically generating markdown documentation from configuration structs with clap derive attributes"
homepage = "https://github.com/videobitva/clap_autodoc"
repository = "https://github.com/videobitva/clap_autodoc"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
clap = { version = "4.0", features = ["derive", "env"] }
tabled = "0.15"
indexmap = "2.0"
lazy_static = "1.4"
darling = "0.20"
heck = "0.5.0"

[dev-dependencies]
trybuild = "1.0"
